--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,33 @@
-[submodule "resin-beaglebone"]
-	path = resin-beaglebone
-	url = git@github.com:resin-io/resin-beaglebone.git
-[submodule "resin-edison"]
-	path = resin-edison
-	url = git@github.com:resin-io/resin-edison.git
-[submodule "resin-fsl-arm"]
-	path = resin-fsl-arm
-	url = git@github.com:resin-io/resin-fsl-arm.git
-[submodule "resin-intel"]
-	path = resin-intel
-	url = git@github.com:resin-io/resin-intel.git
-[submodule "resin-odroid"]
-	path = resin-odroid
-	url = git@github.com:resin-io/resin-odroid.git
-[submodule "resin-parallella"]
-	path = resin-parallella
-	url = git@github.com:resin-io/resin-parallella.git
-[submodule "resin-raspberrypi"]
-	path = resin-raspberrypi
-	url = git@github.com:resin-io/resin-raspberrypi.git
-[submodule "resin-ts"]
-	path = resin-ts
-	url = git@github.com:resin-io/resin-ts.git
-[submodule "resin-via-arm"]
-	path = resin-via-arm
-	url = git@github.com:resin-io/resin-via-arm.git
-[submodule "resin-zc702"]
-	path = resin-zc702
-	url = git@github.com:resin-io/resin-zc702.git
+[submodule "resin-bsp-beaglebone"]
+	path = resin-bsp-beaglebone
+	url = git@github.com:resin-io/resin-bsp-beaglebone.git
+[submodule "resin-bsp-edison"]
+	path = resin-bsp-edison
+	url = git@github.com:resin-io/resin-bsp-edison.git
+[submodule "resin-bsp-fsl-arm"]
+	path = resin-bsp-fsl-arm
+	url = git@github.com:resin-io/resin-bsp-fsl-arm.git
+[submodule "resin-bsp-intel"]
+	path = resin-bsp-intel
+	url = git@github.com:resin-io/resin-bsp-intel.git
+[submodule "resin-bsp-odroid"]
+	path = resin-bsp-odroid
+	url = git@github.com:resin-io/resin-bsp-odroid.git
+[submodule "resin-bsp-parallella"]
+	path = resin-bsp-parallella
+	url = git@github.com:resin-io/resin-bsp-parallella.git
+[submodule "resin-bsp-raspberrypi"]
+	path = resin-bsp-raspberrypi
+	url = git@github.com:resin-io/resin-bsp-raspberrypi.git
+[submodule "resin-bsp-ts"]
+	path = resin-bsp-ts
+	url = git@github.com:resin-io/resin-bsp-ts.git
+[submodule "resin-bsp-via-arm"]
+	path = resin-bsp-via-arm
+	url = git@github.com:resin-io/resin-bsp-via-arm.git
+[submodule "resin-bsp-zc702"]
+	path = resin-bsp-zc702
+	url = git@github.com:resin-io/resin-bsp-zc702.git
 [submodule "yocto-daisy/meta-openembedded"]
 	path = yocto-daisy/meta-openembedded
 	url = git://github.com/openembedded/meta-openembedded
@@ -40,3 +40,6 @@
 [submodule "yocto-fido/poky"]
 	path = yocto-fido/poky
 	url = git://git.yoctoproject.org/poky
+[submodule "resin-device-types"]
+	path = resin-device-types
+	url = git@github.com:resin-io/resin-device-types.git
