--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -13,8 +13,10 @@ RUN ln -s /usr/bin/nodejs /usr/bin/node
 # https://github.com/docker/docker/blob/master/project/PACKAGERS.md#runtime-dependencies
 RUN apt-get update && apt-get install -y iptables procps e2fsprogs xfsprogs xz-utils git kmod && rm -rf /var/lib/apt/lists/*
 ENV DOCKER_VERSION 1.10.1
+ENV DOCKER_SHA256 de4057057acd259ec38b5244a40d806993e2ca219e9869ace133fad0e09cedf2
 VOLUME /var/lib/docker
-RUN wget -q -O /usr/bin/docker https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION} && chmod +x /usr/bin/docker
+RUN wget -q -O /usr/bin/docker https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION} && chmod +x /usr/bin/docker \
+    && echo "${DOCKER_SHA256}" /usr/bin/docker | sha256sum -c -
 
 COPY prepare-and-start.sh /
 
