Use /var/lib/docker as VOLUME
Signed-off-by: Andrei Gherzan <andrei@resin.io>

--- a/automation/Dockerfile_yocto-build-env
+++ b/automation/Dockerfile_yocto-build-env
@@ -28,3 +28,5 @@ RUN wget -q -O /usr/bin/docker https://get.docker.com/builds/Linux/x86_64/docker
 COPY prepare-and-start.sh /
 
 WORKDIR /yocto/resin-board
+
+VOLUME /var/lib/docker
