--- a/automation/Dockerfile_yocto-build-env
+++ b/automation/Dockerfile_yocto-build-env
@@ -24,3 +24,5 @@ RUN wget -q -O /usr/bin/docker https://get.docker.com/builds/Linux/x86_64/docker
 COPY prepare-and-start.sh /
 
 WORKDIR /yocto/resin-board
+
+VOLUME /var/lib/docker
