Dockerfile_balena-push-env: Copy hostapp extension build scripts
Extend the balena-push-env container to also build and push hostapp
extensions.

Change-type: patch
Changelog-entry: Add host extension support to balena-push-env helper container image
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/automation/Dockerfile_balena-push-env
+++ b/automation/Dockerfile_balena-push-env
@@ -31,5 +31,6 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   rm -rf balena-cli.zip balena-cli
 
 COPY manage-docker.sh /
-COPY balena-push-os-version.sh /
+# Do not fail if some files not present for backwards compatibility
+COPY balena-push-os-version.sh balena-hostapp-extension.s[h] balena-api.s[h] balena-create-public-app.s[h] /
 WORKDIR /yocto/resin-board
