Dockerfile_balena-push-env: Refactor to use balena-docker
Use common scripts to manage the docker instance.

Change-type: patch
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/automation/Dockerfile_balena-push-env
+++ b/automation/Dockerfile_balena-push-env
@@ -30,6 +30,6 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   mv balena-cli/* /usr/bin && \
   rm -rf balena-cli.zip balena-cli
 
-COPY manage-docker.sh /
+COPY balena-docker.inc /
 COPY balena-push-os-version.sh /
 WORKDIR /yocto/resin-board
