Dockerfile_balena-push-env: Refactor to use balena-deploy-block
Rename to use balena-deploy-block.

Change-type: patch
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/automation/Dockerfile_balena-push-env
+++ b/automation/Dockerfile_balena-push-env
@@ -30,6 +30,5 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   mv balena-cli/* /usr/bin && \
   rm -rf balena-cli.zip balena-cli
 
-COPY balena-docker.inc /
-COPY balena-push-os-version.sh /
+COPY balena-docker.inc balena-api.inc balena-deploy-block.sh /
 WORKDIR /yocto/resin-board
