--- a/automation/Dockerfile_yocto-build-env
+++ b/automation/Dockerfile_yocto-build-env
@@ -41,7 +41,7 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   mv balena-cli/* /usr/bin && \
   rm -rf balena-cli.zip balena-cli
 
-COPY balena-docker.inc /
-COPY prepare-and-start.sh /
+COPY include/balena-docker.inc /
+COPY entry_scripts/prepare-and-start.sh /
 
 WORKDIR /yocto/resin-board
