Dockerfile: balena-push-env: Shorten installation directory
The installation directory is currently "/yocto/resin-board". This is
too long for the creation of per-task balena-engine sockets which have
a maximum path length of 104 characters.

This commit replaces the installation directory with "/work".

Change-type: patch
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/automation/Dockerfile_balena-push-env
+++ b/automation/Dockerfile_balena-push-env
@@ -31,4 +31,4 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   rm -rf balena-cli.zip balena-cli
 
 COPY include/balena-docker.inc include/balena-api.inc entry_scripts/balena-deploy-block.sh /
-WORKDIR /yocto/resin-board
+WORKDIR /work
