Shorten installation directory '/yocto/resin-board' to '/work'
The installation directory is currently "/yocto/resin-board". This is
too long for the creation of per-task balena-engine sockets which have
a maximum path length of 104 characters.

This commit replaces the installation directory with "/work".

Change-type: patch
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/automation/Dockerfile_yocto-build-env
+++ b/automation/Dockerfile_yocto-build-env
@@ -44,4 +44,4 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
 COPY include/balena-docker.inc /
 COPY entry_scripts/prepare-and-start.sh /
 
-WORKDIR /yocto/resin-board
+WORKDIR /work
