--- a/automation/Dockerfile_balena-push-env
+++ b/automation/Dockerfile_balena-push-env
@@ -30,5 +30,5 @@ RUN curl -sSL https://github.com/balena-io/balena-cli/releases/download/v$BALENA
   mv balena-cli/* /usr/bin && \
   rm -rf balena-cli.zip balena-cli
 
-COPY include/balena-docker.inc include/balena-api.inc entry_scripts/balena-deploy-block.sh /
+COPY include/balena-docker.inc include/balena-lib.inc include/balena-api.inc entry_scripts/balena-deploy-block.sh /
 WORKDIR /work
