--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -26,3 +26,7 @@ jobs:
         github.event_name == 'pull_request_target'
       )
     secrets: inherit
+    with:
+      docker_images: |
+        ghcr.io/balena-os/balena-yocto-scripts
+      bake_targets: yocto-build-env,balena-push-env,yocto-generate-ami-env
